--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
+    "react-native-segmented-control-tab": "^4.0.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.17.2"
   },
