--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "react-native-get-location": "^2.2.1",
     "react-native-movable-view": "^1.0.3",
     "react-native-reanimated": "^2.4.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
     "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-super-grid": "^4.2.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.17.2"
   },
