--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.16.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.0",
