--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "react-native-animatable": "^1.3.3",
     "react-native-base64": "^0.2.1",
     "react-native-biometrics": "^2.1.4",
+    "react-native-date-picker": "^4.2.0",
     "react-native-deep-linking": "^2.2.0",
+    "react-native-document-picker": "^8.0.0",
     "react-native-email-link": "^1.13.1",
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-get-location": "^2.2.1",
+    "react-native-image-picker": "^4.7.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-movable-view": "^1.0.3",
+    "react-native-page-control": "^1.1.2",
     "react-native-reanimated": "^2.4.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.2.1",
@@ -39,6 +44,7 @@
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^4.2.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-webview": "^11.17.2"
   },
