--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-native": "^0.67.3",
     "react-native-actions-sheet": "^0.6.0",
+    "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^1.3.3",
     "react-native-base64": "^0.2.1",
     "react-native-biometrics": "^2.1.4",
@@ -37,6 +38,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-movable-view": "^1.0.3",
     "react-native-page-control": "^1.1.2",
+    "react-native-pager-view": "^5.4.15",
     "react-native-reanimated": "^2.4.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.2.1",
