--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
@@ -27,6 +28,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-base64": "^0.2.1",
     "react-native-biometrics": "^2.1.4",
+    "react-native-calendars": "^1.1279.0",
     "react-native-date-picker": "^4.2.0",
     "react-native-deep-linking": "^2.2.0",
     "react-native-document-picker": "^8.0.0",
