--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.2.1",
     "react-native-screens": "^3.13.1",
+    "react-native-search-bar": "^3.5.1",
     "react-native-segmented-control-tab": "^4.0.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^4.2.0",
