--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-calendars": "^1.1279.0",
     "react-native-date-picker": "^4.2.0",
     "react-native-deep-linking": "^2.2.0",
+    "react-native-dismiss-keyboard": "^1.0.0",
     "react-native-document-picker": "^8.0.0",
     "react-native-email-link": "^1.13.1",
     "react-native-exit-app": "^1.1.0",
