--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-super-grid": "^4.2.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-video": "^5.2.0",
     "react-native-webview": "^11.17.2"
   },
   "devDependencies": {
