--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-document-picker": "^8.0.0",
     "react-native-email-link": "^1.13.1",
     "react-native-exit-app": "^1.1.0",
+    "react-native-fs": "^2.19.0",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-get-location": "^2.2.1",
     "react-native-image-picker": "^4.7.3",
