--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
   package="com.slp_react">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION" />
 
     <application
       android:name=".MainApplication"
@@ -22,4 +25,10 @@
         </intent-filter>
       </activity>
     </application>
+    <queries> 
+        <intent> 
+          <action android:name="android.intent.action.VIEW" /> 
+          <data android:mimeType="*/*" /> 
+        </intent> 
+      </queries>
 </manifest>
