--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.16.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/push-notification-ios": "^1.10.1",
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/messaging": "^14.7.0",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-top-tabs": "^6.1.1",
@@ -45,6 +48,7 @@
     "react-native-movable-view": "^1.0.3",
     "react-native-page-control": "^1.1.2",
     "react-native-pager-view": "^5.4.15",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.4.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.2.1",
