--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/crashlytics": "^14.7.0",
     "@react-native-firebase/messaging": "^14.7.0",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
