--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-search-bar": "^3.5.1",
     "react-native-segmented-control-tab": "^4.0.0",
+    "react-native-share": "^7.3.7",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-super-grid": "^4.2.0",
     "react-native-tab-view": "^3.1.1",
