--- a/ios/SLP_React/SLP_React.entitlements
+++ b/ios/SLP_React/SLP_React.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:pre.stafflinepro.com</string>
+		<string>applinks:app.stafflinepro.com</string>
+	</array>
 </dict>
 </plist>
