--- a/ios/SLP_React/Info.plist
+++ b/ios/SLP_React/Info.plist
@@ -82,5 +82,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>nursedeck</string>
+	</array>
 </dict>
 </plist>
